// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`vaultAdapterAwsConfig given: [case3] unlock flow with exid when: [t0] unlock called with valid session then: outputs valid session reuse message (snapshot) 1`] = `
"🔓 [unit] vaultAdapterAwsConfig.unlock
   ├─ with sso prior?
   │  ├─ ✓ alice@acme.com, access confirmed
   │  └─ ✓ will reuse"
`;

exports[`vaultAdapterAwsConfig given: [case3] unlock flow with exid when: [t1.5] unlock called with expired session and no prior cache then: outputs no prior session message (snapshot) 1`] = `
"🔓 [unit] vaultAdapterAwsConfig.unlock
   ├─ with sso prior?
   │  └─ ✗ clear, no prior session"
`;

exports[`vaultAdapterAwsConfig given: [case3] unlock flow with exid when: [t1] unlock called with expired session then: outputs expired session with conflicted cache message (snapshot) 1`] = `
"🔓 vault.unlock
   ├─ with sso prior?
   │  └─ ✗ clear, no prior session"
`;

exports[`vaultAdapterAwsConfig given: [case3] unlock flow with exid when: [t3] unlock called with absent awsSsoUsername in meta then: error includes hint for re-set (snapshot) 1`] = `
"🔓 [unit] vaultAdapterAwsConfig.unlock
   ├─ with sso prior?
   │  └─ ✗ key lacks awsSsoUsername; re-set required"
`;

exports[`vaultAdapterAwsConfig given: [case3] unlock flow with exid when: [t4] unlock called with username mismatch (valid session, wrong user) then: outputs mismatch message with expected vs observed 1`] = `
"🔓 vault.unlock
   ├─ with sso prior?
   │  ├─ ✗ session user mismatch
   │  │  ├─ expected: alice@acme.com
   │  │  └─ observed: bob@acme.com
   │  └─ ✓ cleared, re-auth triggered"
`;
